tests/errors/malformed_type_application.eff
(* Malformed type application *)
type 'a foo = 'a * 'a
type bar = (integer, integer) foo

